# code-insights

./: Cargo.toml  README.md
lsp-shell/: Cargo.toml
lsp-shell/src/: commands.rs  main.rs  request_handlers.rs
