[package]
name = "lsp-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-client = { git = "https://github.com/selfint/lsp-client", tag = "v0.1.0" }
tokio = { version = "1.24.1", features = ["process"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
serde = "1.0.152"
